@@ -1,3 +1,7 @@
+Sat Aug  3 01:40:33 2013  Tanaka Akira  <akr@fsij.org>
+
+	* bignum.c (big2str_orig): Rename a local variable.
+
 Sat Aug  3 01:20:19 2013  Tanaka Akira  <akr@fsij.org>
 
 	* bignum.c (bigadd_core): Removed.
